fix movesheet item alignment

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -376,10 +376,6 @@
     }
   }
 
-  .movesheet-row {
-    transition: all 0.4s ease;
-  }
-
   .progresses {
     .item {
       border: 1px solid;
